# TaroMagic

./: .gitignore  Makefile  docker-compose.yaml
migrations/: env.py
src/: Dockerfile  __main__.py  pyproject.toml
src/api/: setup.py
src/api/common/: exceptions.py
src/api/common/mediator/: mediator.py  proxy.py  register.py
src/api/common/providers/: stub.py
src/api/common/responses/: __init__.py  json.py  orjson.py
src/api/v1/: dependencies.py  setup.py
src/api/v1/docs/: account.py  auth.py  healthcheck.py  product.py  user.py
src/api/v1/endpoints/: __init__.py  account.py  auth.py  card.py  healthcheck.py  product.py  user.py
src/bot/: webhook.py
src/bot/handlers/: __init__.py  echo.py
src/cache/core/: client.py
src/common/: tools.py  types.py
src/common/dto/: __init__.py  account.py  base.py  card.py  healthcheck.py  photo.py  product.py  token.py  user.py
src/common/enum/: cardset.py  tarocard.py
src/common/exceptions/: __init__.py  routers.py  services.py
src/common/interfaces/: crud.py  gateway.py
src/common/serializers/: default.py  json.py  orjson.py
src/core/: settings.py
src/database/: converter.py  factory.py  gateway.py  s3_client.py
src/database/core/: __init__.py  connection.py  manager.py
src/database/models/: __init__.py  account.py  photo.py  product.py  user.py
src/database/repositories/: account.py  minio_repository.py  product.py  user.py
src/services/: account.py  factory.py  gateway.py  product.py  user.py
src/services/security/: argon_hasher.py  jwt_token.py
src/utilities/: random_card.py
(+31 files in other folders)
