[project]
name = "taromagic"
version = "0.1.0"
description = ""
authors = [
    {name = "Viktor Bagrov",email = "keramogranitus@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.124.0,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "aiobotocore (>=3.0.0,<4.0.0)",
    "types-aiobotocore-s3 (>=2.26.0,<3.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "fakeredis (>=2.32.1,<3.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "alembic (>=1.17.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
